--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,26 +1,94 @@
-.App {
-  text-align: center;
+div, form, h4, p, span, ul, ol, li, input, button{
+  padding:0;
+  margin:0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+ul, ol{
+  list-style:none;
+}
+
+
+.App {
+  color:#282c34;
+}
+
+.App-body{
+  display:flex;
+  justify-content: center;
+
+  margin-top:20px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+
+  padding:10px 0px;
+
   color: white;
+  background-color: #282c34;
 }
 
-.App-link {
-  color: #61dafb;
+.addbutton {
+  margin-left:20px;
+  background:none;
+  border:none;
+  text-decoration: underline;
+  color:blue;
+}
+
+.task-container{
+  background: lightgrey;
+  border:1px solid #282c34;
+  width:400px;
+  margin-left:20px;
+  min-height:200px;
+}
+
+.task-container h4{
+  display:flex;
+  justify-content: center;
+  align-content: center;
+
+  padding:5px 0px;
+
+
+  background: lightgreen;
+  color: #282c34;
+  border-bottom:1px solid lightgray
+}
+
+.task-container li{
+  margin-bottom:5px;
+  padding:10px;
+}
+
+.task {
+  width:50%;
+  border:2px solid black;
+  padding:10px;
+}
+
+.task-progress{
+  background:white;
+}
+
+.task-completed {
+  display:flex;
+  justify-content: space-between;
+  background:orange;
+  text-decoration:line-through;
+}
+.task span{
+  cursor:pointer;
+}
+
+
+
+/* .addbutton {
+  animation: App-logo-spin infinite 5s linear;
 }
 
 @keyframes App-logo-spin {
@@ -30,4 +98,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
